# mini-projet-conway-jeux-de-la-vie

./: .gitignore  README.md  Test.py  __init__.py  pyproject.toml
conway/: __init__.py  __main__.py  game_of_life.py  graphics.py  interface.py
mon_env/: pyvenv.cfg
mon_env/Scripts/: activate  activate.bat
tests/: test_example.py  tests_GameOfLife.py  tests_Graphics.py  tests_Interface.py  tests_example.py  tests_main.py
