[tool.poetry]
name = "poetry-package"
version = "0.1.0"
description = ""
authors = ["Jonas Perez <jonas.perez@hes-so.ch>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.6.1"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
