[tool.poetry]
name = "conway"
version = "0.1.0"
description = ""
authors = ["Jonas Perez <jonas.perez@hes-so.ch>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.6.1"
numpy = "^2.1.3"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
